# image_processor

./: CMakeLists.txt  README.md  image_processor
src/: CMakeLists.txt
src/args/: args.cpp
src/filters/: blur.cpp  crop.cpp  edge.cpp  flash.cpp  gs.cpp  matrix_filter.cpp  matrix_filter.h  neg.cpp  registry.h  sharp.cpp
src/image/: color.cpp  color.h  image.h
src/image_format/: bmp.h
src/io/: reader.cpp  reader.h  writer.cpp  writer.h
tests/: blur.cpp  crop.cpp  edge.cpp  flash.cpp  gs.cpp  io.cpp  neg.cpp  sharp.cpp
